--- a/css/style.css
+++ b/css/style.css
@@ -6,27 +6,26 @@ body {
   margin: 0;
   width: 100%;
   height: 162%;
-  font-family: 'Amaranth', sans-serif;
+  
 }
 header{
-  color: #29b000;
+  color: 
 
 }
 
 h1 {
-  text-align: center;
-  color: #a90091;
+  text-align: ;
+  color:
   
 }
 p{
-text-align: left;
-color:#29b000;
-font-size: 18px;
+text-align: 
+color:
+
 }
 
 .headshot{
-  width: 50%; 
-  float: left;
+
 
 }
 
@@ -69,10 +68,10 @@ font-size: 18px;
   backface-visibility: hidden;
 }
 .front {
-  background-image: url(../img/paper.jpg);
+  background-image: url()
 }
 .back {
-  background-image: url(../img/paper_flipped.jpg);
+  background-image: url();
 }
 
 .back {
@@ -94,14 +93,6 @@ p {
   text-indent: 1em;
 }
 
-#pagetwo h1{
-  width: 50%;
-  float: right;
-}
-
-#pagetwo p {
-  clear: both;
-}
 
 footer {}
 
